# tower-stratum

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: coverage.yml  rust-ci.yml  rust-test.yml
examples/mining-client-cpu-miner/: Cargo.toml
examples/mining-client-cpu-miner/src/: client.rs  main.rs
examples/mining-server/: Cargo.toml  README.md  config.toml
examples/mining-server/src/: client.rs  config.rs  handler.rs  main.rs  server.rs
examples/sibling-io-communication/: Cargo.toml
examples/sibling-io-communication/src/: configs.rs
examples/template-distribution-client/: Cargo.toml  README.md  config.toml
examples/template-distribution-client/src/: client.rs  config.rs  handler.rs  main.rs
src/: lib.rs
src/client/: mod.rs
src/client/service/: config.rs  error.rs  layer.rs  mod.rs  request.rs  response.rs  sibling.rs
src/client/service/subprotocols/: mod.rs
src/client/service/subprotocols/job_declaration/: handler.rs
src/client/service/subprotocols/template_distribution/: handler.rs  mod.rs  request.rs  response.rs
src/client/tcp/: encrypted.rs  mod.rs  unencrypted.rs
src/server/: mod.rs
src/server/service/: client.rs  config.rs  connection.rs  error.rs  layer.rs  mod.rs  request.rs  response.rs  sibling.rs
src/server/service/subprotocols/job_declaration/: handler.rs
src/server/service/subprotocols/mining/: handler.rs  request.rs
src/server/service/subprotocols/template_distribution/: handler.rs
src/server/tcp/: encrypted.rs  mod.rs  unencrypted.rs
