[package]
name = "tower-stratum"
authors = ["plebhash <plebhash@proton.me>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

# tokio
tokio = { version = "1.44.1", features = ["full", "tracing"] }

# tower
tower = { version = "0.5.0", features = ["full"] }

# misc
async-channel = "1.5.1"
serde = { version = "1.0.89", features = ["derive", "alloc"]}
tracing = "0.1"
tracing-subscriber = "0.3.19"
secp256k1 = { version = "0.28.2", default-features = false }

# SRI
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
network_helpers_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
framing_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
codec_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
const_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
binary_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
binary_codec_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
buffer_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
noise_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
key-utils = { git = "https://github.com/stratum-mining/stratum", branch = "main" }

[dev-dependencies]
once_cell = "1.19.0"

# tokio debugging
console-subscriber = { version = "0.4.1" }

