[package]
name = "tower-stratum"
authors = ["plebhash <plebhash@proton.me>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

# tokio
tokio = { version = "1.44.1", features = ["full", "tracing"] }

# tower
tower = { version = "0.5.0", features = ["full"] }

# misc
async-channel = "1.5.1"
serde = { version = "1.0.89", features = ["derive", "alloc"]}
tracing = "0.1"
tracing-subscriber = "0.3.19"
secp256k1 = { version = "0.28.2", default-features = false }

# SRI
network_helpers_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
roles_logic_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
framing_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
codec_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
binary_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
binary_codec_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
buffer_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
noise_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
key-utils = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }

[dev-dependencies]
once_cell = "1.19.0"
integration_tests_sv2 = { git = "https://github.com/plebhash/stratum", branch = "2025-05-30-realocate-constants" }
hex = "0.4.3"

# tokio debugging
console-subscriber = { version = "0.4.1" }

