[package]
name = "mining-client-cpu-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-stratum = { path = "../.." }
tokio = { version = "1", features = ["full", "tracing", "signal"] }
tracing = "0.1"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
binary_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
framing_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
key-utils = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }