[package]
name = "sibling-io-communication"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-stratum = { path = "../.." }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
tracing = "0.1.41"
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
hex = "0.4.3"
tracing-subscriber = "0.3.19"
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }

[dev-dependencies]
binary_codec_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }